# lodestone

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: config.toml  magnet.toml  magnet_discs_quad_field.toml  magnet_discs_uniform.toml
lodestone_core/: Cargo.toml  README.md
lodestone_core/.cargo/: config
lodestone_core/src/: error.rs  katex.html  lib.rs  magnets.rs  parse.rs  points.rs
lodestone_core/src/magnets/: base.rs  magnet2d.rs  magnet3d.rs
lodestone_core/src/magnets/magnet2d/: circle.rs  circle_field.rs  field_loop_2d.rs  line.rs  line_field.rs  polygon.rs  rectangle.rs  rectangle_field.rs
lodestone_core/src/magnets/magnet3d/: bulirsch.rs  prism.rs  prism_field.rs  solenoid.rs
lodestone_core/src/parse/: read_config.rs  write_config.rs
lodestone_core/src/points/: point_vec2.rs  points2.rs  points3.rs  polarpoints.rs  rotation_2d.rs  sphericalpoints.rs
lodestone_core/src/utils/: comparison.rs  conversions.rs  quaternion.rs
lodestone_python/: Cargo.toml  README.md  pyproject.toml
lodestone_python/python_test/: rectangle_field.py
lodestone_python/src/: lib.rs
magnet_rs/: Cargo.toml  README.md
magnet_rs/data/: example_out.json  magnet.toml  magnet_discs_quad_field.toml  plot_example.py
magnet_rs/src/: args.rs  demo.rs  main.rs
src/: _old_lib.rs  config.rs  error.rs  interface.rs  lib.rs  magnets.rs  main.rs  points.rs  routines.rs  utils.rs
src/config/: args.rs  demo.rs  read_config.rs  write_config.rs
src/magnets/: base.rs  burlich.rs  burlisch.rs  lines.rs  magnet2d.rs  magnet3d.rs  sheets.rs  solenoid.rs
src/magnets/magnet2d/: circle.rs  circle_field.rs  field_loop_2d.rs  line.rs  line_field.rs  polygon.rs  rectangle.rs  rectangle_field.rs
src/magnets/magnet3d/: bulirsch.rs  prism.rs  solenoid.rs
src/points/: point_array2.rs  point_vec2.rs  points2.rs  points3.rs  polarpoints.rs  rotation_2d.rs
src/routines/: sum_field2d.rs
src/utils/: comparison.rs  conversions.rs  point_array2.rs  points.rs  points2.rs  points3.rs
