[package]
name = "magnet_rs"
version = "0.1.0"
authors = ["Peter Dunne <peter.dunne@applied-magnetism.com>"]
edition = "2018"
description = "User friendly magnetic field calculations in Rust"
homepage = "https://github.com/pdunne/"
repository = "https://github.com/pdunne/magnet_rs"
readme = "README.md"
keywords =["magnetism", "magnetic", "field", "calculations", ]
categories = ["mathematics", "science", "simulation"]
license = "MPL-2.0"


# [lib]
# name = "magnet_rs"
# crate-type = ["cdylib"]

# [dependencies.pyo3]
# version = "0.13.1"
# features = ["extension-module"]


[dependencies]
rayon = "1.5"
anyhow="1.0"
thiserror="1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml="0.5"
csv = "1.1"
clap = "2.33"
indicatif = {version="0.16", features = ["rayon"]}

# ndarray = "0.15.3"
# nalgebra =  "0.27.1"
# simba = {version = "0.5.1", features=["wide"]}
# wide ="0.6.5"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "./src/katex.html"
] 


