[package]
name = "lodestone_core"
version = "0.2.3"
authors = ["Peter Dunne <peter.dunne@applied-magnetism.com>"]
edition = "2018"
description = "User friendly magnetic field calculations in Rust"
homepage = "https://www.applied-magnetism.com/"
repository = "https://github.com/pdunne/magnet_rs"
readme = "README.md"
keywords =["magnetism", "magnetic", "field", "calculations", ]
categories = ["mathematics", "science", "simulation"]
license = "MPL-2.0"


[dependencies]
rayon = "1.5"
anyhow="1.0"
thiserror="1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

approx = "0.5"


toml="0.5"
indicatif = {version = "0.16", features = ["rayon"]}



[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "./src/katex.html"
] 


