[package]
name = "lodestone_python"
version = "0.2.3"
authors = ["Peter Dunne <peter.dunne@applied-magnetism.com>"]
edition = "2018"
description = "User friendly magnetic field calculations in Rust"
homepage = "https://www.applied-magnetism.com/"
repository = "https://github.com/pdunne/lodestone"
readme = "README.md"
keywords = ["magnetism", "magnetic", "field", "calculations"]
categories = ["mathematics", "science", "simulation"]
license = "MPL-2.0"


[lib]
name = "lodestone"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]

[dependencies]
lodestone_core = { path = "../lodestone_core", version = "0.2" }
